2020-07-13  Jose E. Marchesi  <jemarch@gnu.org>

	* .x-sc_bindtextdomain: New file.
	* testsuite/poke.mi-json/Makefile.am: New file.
	* testsuite/poke.mi-json/mi-json.c: Likewise.
	* testsuite/poke.mi-json/json.exp: Likewise.
	* configure.ac: AC_CONFIG testsuite/poke.mi-json/Makefile.
	* testsuite/Makefile.am (SUBDIRS): Add poke.mi-json.
	* poke/pk-mi-json.c (pk_mi_json_to_msg): Do not print tokener
	diagnostics.
	* HACKING (Test Suite): Update.

2020-07-13  Bruno Haible  <bruno@clisp.org>

	Fix build failure during "make check".
	* bootstrap.conf (libpoke_modules): Add vasprintf-posix.
	(ACLOCAL_FLAGS): New variable.
	* Makefile.am (ACLOCAL_AMFLAGS): Add -I options for the second and third
	gnulib-tool invocation.
	* configure.ac: Invoke libpoke_EARLY, gui_EARLY, libpoke_INIT, gui_INIT.

2020-07-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/Makefile.am (EXTRA_DIST): Add libpoke.
	* testsuite/poke.libpoke/libpoke.exp: New file.
	* testsuite/poke.libpoke/Makefile.am: Likewise.
	* testsuite/poke.libpoke/values.c: Likewise.
	* testsuite/poke.libpoke/term-if.h: Likewise.
	* configure.ac: AC_CONFIG testsuite/libpoke/Makefile.
	* HACKING (Unit Tests): New section.

2020-07-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_FORGET): Define.
	* libpoke/pkl-tab.y (BUILTIN_FORGET): Define.
	(builtin): Handle BUILTIN_FORGET.
	* libpoke/pkl-lex.l: Handle __PKL_BUILTIN_FORGET__.
	* libpoke/pkl-rt.pk (flush): Define.
	* doc/poke.texi (flush): New section.
	* libpoke/pkl-insn.def (PKL_INSN_FLUSH): Define.
	* libpoke/pvm.jitter (flush): New instruction.

2020-07-12  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/ios-dev-file.c (ios_dev_file_handler_normalize): Add
	parameter "flags".
	* libpoke/ios-dev-mem.c (ios_dev_mem_handler_normalize): Likewise.
	* libpoke/ios-dev-nbd.c (ios_dev_nbd_handler_normalize): Likewise.
	* libpoke/ios-dev.h (struct ios_dev_if): Add parameter "flags" to
	handler_normalize.