@@ -43,23 +43,11 @@ struct ios_dev_file
 static char *
 ios_dev_file_handler_normalize (const char *handler, uint64_t flags)
 {
-  /* This backend is special, in the sense it accepts any handler.
-     However, we want to ensure that the ios name is unambiguous from
-     other ios devices, by prepending ./ to relative names that might
-     otherwise be confusing.  */
-  static const char safe[] =
-    "abcdefghijklmnopqrstuvwxyz"
-    "ABCDEFGHIJKLMNOPQRSTUVWXYZ"
-    "0123456789/+_-";
-  char *ret;
+  char *newhandler;
+  IOS_FILE_HANDLER_NORMALIZE (handler, newhandler);
 
-  if (handler[0] == '/' || strspn (handler, safe) == strlen (handler))
-    return strdup (handler);
-
-  if (asprintf (&ret, "./%s", handler) == -1)
-    return NULL;
-
-  return ret;
+  /* TODO handle the case where newhandler is NULL.  */
+  return newhandler;
 }
 
 static void *
